force-app/main/default/objects/Architecture__c/Architecture__c.object-meta.xml
<CustomObject>
    <label>Architecture</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Architecture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Architectures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>