force-app/main/default/objects/Architecture__c/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <description>Created by: MS, Business Unit:BWTC, for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Admin Email</label>
    <type>Email</type>
</CustomField>