force-app/main/default/objects/Architecture__c/fields/Admin_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_First_Name__c</fullName>
    <description>Created by: YB, Business Unit:BWTC, for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Admin First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>