force-app/main/default/objects/Architecture__c/fields/Analytics__c.field-meta.xml
<CustomField>
    <fullName>Analytics__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Analytics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>EA Industry Products</fullName>
            </value>
            <value>
                <fullName>Prediction Builder</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>