force-app/main/default/objects/Architecture__c/fields/Arch_Stages__c.field-meta.xml
<CustomField>
    <fullName>Arch_Stages__c</fullName>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app stage</description>
    <label>Arch Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Project Created</fullName>
            </value>
            <value>
                <fullName>Awaiting Assignment</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Awaiting Arch Documentation</fullName>
            </value>
            <value>
                <fullName>Arch. Documentation Provided</fullName>
            </value>
            <value>
                <fullName>Move to Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>