force-app/main/default/objects/Architecture__c/fields/B2C_Commerce__c.field-meta.xml
<CustomField>
    <fullName>B2C_Commerce__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>B2C Commerce</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C Commerce</fullName>
            </value>
            <value>
                <fullName>Commerce Portals</fullName>
            </value>
            <value>
                <fullName>Einstein for Commerce</fullName>
            </value>
            <value>
                <fullName>Salesforce Order Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>