force-app/main/default/objects/Architecture__c/fields/Campaign_Number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Number__c</fullName>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app</description>
    <inlineHelpText>Is this Lead associated with Salesforce Campaign?
Enter the 18-Digit Campaign number</inlineHelpText>
    <label>Campaign Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>