force-app/main/default/objects/Architecture__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <type>TextArea</type>
</CustomField>