force-app/main/default/objects/Architecture__c/fields/Community_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Community_Cloud__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Community Cloud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Customer Portal (incl. Self Service)</fullName>
            </value>
            <value>
                <fullName>Partner Relationship Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>