force-app/main/default/objects/Architecture__c/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <description>Created By:CMP Business Unit:BWTC Purpose: pulls value from them BillingCity Field</description>
    <formula>Company_Name__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company City</label>
    <type>Text</type>
</CustomField>