force-app/main/default/objects/Architecture__c/fields/Company_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Country__c</fullName>
    <description>Created By:CMP Business Unit:BWTC Purpose:Pulls value from BillingCountry</description>
    <formula>Company_Name__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Country</label>
    <type>Text</type>
</CustomField>