force-app/main/default/objects/Architecture__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <inlineHelpText>This field will be auto populated when an Architecture record is created. This field pulls its value from the related Project record, Account field.</inlineHelpText>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Architectures</relationshipLabel>
    <relationshipName>Partner_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>