force-app/main/default/objects/Architecture__c/fields/Company_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Company_State_Province__c</fullName>
    <description>Created By:CMP Business Unit:BWTC Purpose:pulls value from BillingState field</description>
    <formula>Company_Name__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company State</label>
    <type>Text</type>
</CustomField>