force-app/main/default/objects/Architecture__c/fields/Company_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Street_Address__c</fullName>
    <description>Created By:CMP Business Unit:BWTC Purpose:pulls value from BillingStreet field</description>
    <formula>Company_Name__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Street</label>
    <type>Text</type>
</CustomField>