force-app/main/default/objects/Architecture__c/fields/Company_Zip_Postal__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip_Postal__c</fullName>
    <description>Created By:CMP Business Unit:BWTC Purpose:pulls value from BillingPostalCode</description>
    <formula>Company_Name__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Postal Code</label>
    <type>Text</type>
</CustomField>