force-app/main/default/objects/Architecture__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Architectures</relationshipLabel>
    <relationshipName>Partner_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>