force-app/main/default/objects/Architecture__c/fields/Contact_me_before_communicating_with_thi__c.field-meta.xml
<CustomField>
    <fullName>Contact_me_before_communicating_with_thi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <inlineHelpText>Contact me before communicating with this Decision maker.</inlineHelpText>
    <label>Contact Me Before Communicating</label>
    <type>Checkbox</type>
</CustomField>