force-app/main/default/objects/Architecture__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>18</length>
    <type>Text</type>
</CustomField>