force-app/main/default/objects/Architecture__c/fields/Customer_360_Platform__c.field-meta.xml
<CustomField>
    <fullName>Customer_360_Platform__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Customer 360 Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Integration Services</fullName>
            </value>
            <value>
                <fullName>ISV AppExchange</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Next Best Action</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Shield</fullName>
            </value>
            <value>
                <fullName>Sustainability Cloud</fullName>
            </value>
            <value>
                <fullName>Vision &amp; Language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>