force-app/main/default/objects/Architecture__c/fields/Decision_Maker_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_First_Name__c</fullName>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app</description>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Maker First Name</label>
    <type>Text</type>
</CustomField>