force-app/main/default/objects/Architecture__c/fields/Education_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Education_Cloud__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Education Cloud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advancement</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Student Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>