force-app/main/default/objects/Architecture__c/fields/Estimated_Sign_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sign_up_Date__c</fullName>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Sign-up Date</label>
    <type>Date</type>
</CustomField>