force-app/main/default/objects/Architecture__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>i. What are the customer&apos;s technical requirements?		
ii. What are the customer&apos;s business requirements?		
iii. What solution is the customer using now?		
iv. What other solutions are the customer evaluating?</inlineHelpText>
    <label>Goals</label>
    <type>TextArea</type>
</CustomField>