force-app/main/default/objects/Architecture__c/fields/Industry_Products__c.field-meta.xml
<CustomField>
    <fullName>Industry_Products__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Industry Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Goods Cloud</fullName>
            </value>
            <value>
                <fullName>Financial Services Cloud</fullName>
            </value>
            <value>
                <fullName>Health Cloud</fullName>
            </value>
            <value>
                <fullName>Manufacturing Cloud</fullName>
            </value>
            <value>
                <fullName>Public Sector Cloud (LPI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>