force-app/main/default/objects/Architecture__c/fields/Integration_Mulesoft__c.field-meta.xml
<CustomField>
    <fullName>Integration_Mulesoft__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Integration (Mulesoft)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MuleSoft Anypoint Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>