force-app/main/default/objects/Architecture__c/fields/Is_prospect_company_government_owned__c.field-meta.xml
<CustomField>
    <fullName>Is_prospect_company_government_owned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Is prospect company  government owned?</label>
    <type>Checkbox</type>
</CustomField>