force-app/main/default/objects/Architecture__c/fields/Marketing_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Marketing Cloud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising Studio</fullName>
            </value>
            <value>
                <fullName>Audience Studio</fullName>
            </value>
            <value>
                <fullName>Core Messaging/Journeys</fullName>
            </value>
            <value>
                <fullName>Datorama</fullName>
            </value>
            <value>
                <fullName>Distributed Marketing &amp; MC Connect</fullName>
            </value>
            <value>
                <fullName>Einstein for Marketing</fullName>
            </value>
            <value>
                <fullName>Interaction Studio</fullName>
            </value>
            <value>
                <fullName>Social Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>