force-app/main/default/objects/Architecture__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>