force-app/main/default/objects/Architecture__c/fields/Nonprofit_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Nonprofit_Cloud__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Nonprofit Cloud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Grantmaking</fullName>
            </value>
            <value>
                <fullName>Program Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>