force-app/main/default/objects/Architecture__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tell us more about your client here. Examples include, but not limited to, client’s key objectives, size of the company, required uptime, etc.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>