force-app/main/default/objects/Architecture__c/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <label>Number of Users</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-5 users</fullName>
            </value>
            <value>
                <fullName>6-20 users</fullName>
            </value>
            <value>
                <fullName>21-100 users</fullName>
            </value>
            <value>
                <fullName>101-500 users</fullName>
            </value>
            <value>
                <fullName>501-3,500 users</fullName>
            </value>
            <value>
                <fullName>3500+ users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>