force-app/main/default/objects/Architecture__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By:MS Business Unit:BWTC Purpose:for Architecture app</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Architectures</relationshipLabel>
    <relationshipName>Partner_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>