force-app/main/default/objects/Architecture__c/fields/Pains__c.field-meta.xml
<CustomField>
    <fullName>Pains__c</fullName>
    <description>Created By:MS Business Unit:BWTC Purpose:for Architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pains</label>
    <type>TextArea</type>
</CustomField>