force-app/main/default/objects/Architecture__c/fields/Pardot__c.field-meta.xml
<CustomField>
    <fullName>Pardot__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Pardot</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Based Marketing (ABM)</fullName>
            </value>
            <value>
                <fullName>Business Units</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>