force-app/main/default/objects/Architecture__c/fields/Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email__c</fullName>
    <description>Created By:MS Business Unit:BWTC Purpose:for Architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Email</label>
    <type>Email</type>
</CustomField>