force-app/main/default/objects/Architecture__c/fields/Partner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Last_Name__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>