force-app/main/default/objects/Architecture__c/fields/Partner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Partner_Phone__c</fullName>
    <description>Created by: MS, Business Unit:BWTC,Purpose: for architecture app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Phone</label>
    <type>Phone</type>
</CustomField>