force-app/main/default/objects/Architecture__c/fields/PDO_Product_Development_Outsourcers__c.field-meta.xml
<CustomField>
    <fullName>PDO_Product_Development_Outsourcers__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>PDO: Product Development Outsourcers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AppExchange Listing, Trials and Demo</fullName>
            </value>
            <value>
                <fullName>Architecture &amp; UX Design</fullName>
            </value>
            <value>
                <fullName>Development/A/Release Management/Security Review</fullName>
            </value>
            <value>
                <fullName>Ideation/Business Model/Value Prop</fullName>
            </value>
            <value>
                <fullName>Marketing Support</fullName>
            </value>
            <value>
                <fullName>Package Review &amp; Optimization</fullName>
            </value>
            <value>
                <fullName>Product Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>