force-app/main/default/objects/Architecture__c/fields/Potential_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Potential_Sale_Value__c</fullName>
    <description>Created by: YB, Business Unit:BWTC,Purpose: for architecture app</description>
    <label>Potential Sale Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than $5000</fullName>
            </value>
            <value>
                <fullName>$5001- $25,000</fullName>
            </value>
            <value>
                <fullName>$25001-$50,000</fullName>
            </value>
            <value>
                <fullName>$50,001-$100,000</fullName>
            </value>
            <value>
                <fullName>$100,000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>