force-app/main/default/objects/Architecture__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <description>Created By:CMP Business Unit:BWTC Purpose:Appends Primary Client Contact info to this field, under Customer Decision Maker section in Architecture object</description>
    <formula>Project_Name__r.Primary_Contact__r.Email</formula>
    <label>Primary Contact Email</label>
    <type>Text</type>
</CustomField>