force-app/main/default/objects/Architecture__c/fields/Primary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_First_Name__c</fullName>
    <description>Created By:CMP Business Unit:BWTC Purpose:Appends Primary Client Contact info to this field, under Customer Decision Maker section in Architecture</description>
    <formula>Project_Name__r.Primary_Contact__r.FirstName</formula>
    <label>Primary Contact First Name</label>
    <type>Text</type>
</CustomField>